--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Docker Lite Desk</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@3.3.22/dist/vuetify.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue@3.4.21/dist/vue.global.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuetify@3.3.22/dist/vuetify.min.js"></script>
+    <style>
+        body {
+            background-color: #f5faff;
+            font-family: 'Noto Sans JP', sans-serif;
+        }
+        v-card {
+            border-radius: 12px;
+            background-color: #ffffff;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        v-btn {
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            background-color: #e0f7fa;
+        }
+    </style>
 </head>
 
 <body>
@@ -14,43 +31,63 @@
         <v-app>
             <v-main class="pa-4">
                 <v-container>
-                    <v-tabs v-model="tab" bg-color="grey-lighten-4">
+                    <v-tabs v-model="tab" grow bg-color="grey-lighten-4">
                         <v-tab value="containers">コンテナ一覧</v-tab>
                         <v-tab value="images">イメージ一覧</v-tab>
                     </v-tabs>
-
-                    <!-- 通知 -->
-                    <v-alert v-if="message" type="success" class="my-4">{{ message }}</v-alert>
-                    <v-alert v-if="error" type="error" class="my-4">{{ error }}</v-alert>
-
                     <!-- コンテナ一覧 -->
                     <div v-if="tab === 'containers'">
-                        <v-btn @click="fetchContainers" color="primary" class="my-4">再読み込み</v-btn>
-                        <v-card v-for="c in containers" :key="c.id" class="mb-4" variant="outlined">
-                            <v-card-title>{{ c.name }} ({{ c.id }})</v-card-title>
-                            <v-card-subtitle>イメージ: {{ c.image }}<br />状態: {{ c.status }}</v-card-subtitle>
-                            <v-card-actions>
-                                <v-btn v-if="c.status.includes('Exited')" color="green"
-                                    @click="dockerAction('start', c.id)">Start</v-btn>
-                                <v-btn v-if="c.status.includes('Up')" color="red"
-                                    @click="dockerAction('stop', c.id)">Stop</v-btn>
-                                <v-btn v-if="c.status.includes('Exited')" color="grey-darken-1"
-                                    @click="dockerAction('rm', c.id)">Remove</v-btn>
-                            </v-card-actions>
+                        <v-btn @click="fetchContainers" color="primary" class="my-2" style="min-width: 100px;">再読み込み</v-btn>
+                        <v-card v-for="c in containers" :key="c.id" class="mb-4" variant="outlined" elevation="2">
+                            <v-row justify="space-between">
+                                <v-col cols="7" class="d-flex flex-column align-center">
+                                <div class="d-flex flex-column py-2" style="min-width: 300px;">
+                                    <span class="text-h6 font-weight-bold">{{ c.name }}</span>
+                                    <div>ID: {{ c.id }}</div>
+                                    <div>イメージ: {{ c.image }}</div>
+                                </div>
+                                </v-col>
+                                <v-col cols="5" class="d-flex flex-column align-center justify-center">
+                                    <div>
+                                        <v-chip small color="primary" class="mb-2 d-flex align-center">{{ c.status }}</v-chip>
+                                    </div>
+                                    <div class="d-flex flex-row justify-center mt-2">
+                                        <v-btn v-if="c.status.includes('Exited')" color="green" class="mx-1" style="min-width: 100px;"
+                                            @click="dockerAction('start', c.id)">Start</v-btn>
+                                        <v-btn v-if="c.status.includes('Up')" color="red" class="mx-1" style="min-width: 100px;"
+                                            @click="dockerAction('stop', c.id)">Stop</v-btn>
+                                        <v-btn :disabled="c.status.includes('Up')" color="grey-darken-1" class="mx-1" style="min-width: 100px;"
+                                            @click="dockerAction('rm', c.id)">Remove</v-btn>
+                                    </div>
+                                </v-col>
+                            </v-row>
                         </v-card>
                     </div>
 
                     <!-- イメージ一覧 -->
                     <div v-if="tab === 'images'">
-                        <v-btn @click="fetchImages" color="primary" class="my-4">再読み込み</v-btn>
-                        <v-card v-for="img in images" :key="img.id" class="mb-4" variant="outlined">
-                            <v-card-title>{{ img.repository }}:{{ img.tag }}</v-card-title>
-                            <v-card-subtitle>ID: {{ img.id }} / サイズ: {{ img.size }}</v-card-subtitle>
-                            <v-card-actions>
-                                <v-btn color="red" @click="dockerAction('rmi', img.id)">Remove</v-btn>
-                            </v-card-actions>
+                        <v-btn @click="fetchImages" color="primary" class="my-2" style="min-width: 100px;">再読み込み</v-btn>
+                        <v-card v-for="img in images" :key="img.id" class="mb-4" variant="outlined" elevation="2">
+                            <v-row justify="space-between">
+                                <v-col cols="7">
+                                    <v-card-title><v-icon left>mdi-image</v-icon> {{ img.repository }}:{{ img.tag }}</v-card-title>
+                                    <div>ID: {{ img.id }} / サイズ: <v-chip small color="secondary">{{ img.size }}</v-chip></div>
+                                </v-col>
+                                <v-col cols="5" class="text-right">
+                                    <v-card-actions>
+                                        <v-btn color="red" class="my-2" style="min-width: 100px;" @click="dockerAction('rmi', img.id)">Remove</v-btn>
+                                    </v-card-actions>
+                                </v-col>
+                            </v-row>
                         </v-card>
                     </div>
+                    
+                    <v-divider class="my-4"></v-divider>
+
+                    <!-- 通知 -->
+                    <v-alert v-if="message" type="success" class="my-4">{{ message }}</v-alert>
+                    <v-alert v-if="error" type="error" class="my-4">{{ error }}</v-alert>
+
                 </v-container>
 
             </v-main>
